added the concept of 'Hydrators', this allows devs to hydrate the context with whatev.

--- a/source/PerfMatters.Flush/PerfMatters.Flush.csproj
+++ b/source/PerfMatters.Flush/PerfMatters.Flush.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ContollerBaseExtension.cs" />
     <Compile Include="FlushHeadAttribute.cs" />
     <Compile Include="HtmlHelperExtension.cs" />
+    <Compile Include="Hydrators\IHydrator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
